* Fix Ribbons * Fix Comments without user

--- a/app/assets/stylesheets/metro.scss.erb
+++ b/app/assets/stylesheets/metro.scss.erb
@@ -122,7 +122,7 @@
     display: inline-block;
     width:56px;
 	padding-bottom:20px;
-	background-image:url(ribbons.png);
+	background-image:url(<%= asset_path 'ribbons.png' %>);
 	background-repeat: no-repeat;
 	background-position: -60px bottom;
     position: relative;
