--- a/app/views/public_activity/comment/_create.html.erb
+++ b/app/views/public_activity/comment/_create.html.erb
@@ -1,3 +1,3 @@
 <%= render_feed_event activity, 'comment' do %>
-  <%= link_to activity.owner.email, activity.owner if activity.owner %> added comment to <%= link_to activity.trackable.commentable.title, activity.trackable.commentable %>
+  <%= activity.owner ? link_to activity.owner.email, activity.owner : 'Guest' %> added a comment to <%= link_to activity.trackable.commentable.title, activity.trackable.commentable %>
 <% end %>
