another asset_path missing

--- a/app/assets/stylesheets/metro.scss.erb
+++ b/app/assets/stylesheets/metro.scss.erb
@@ -132,7 +132,7 @@
 	display:block;
     width:56px;
 	padding-top:16px;
-	background-image:url(ribbons.png);
+	background-image:url(<%= asset_path 'ribbons.png' %>);
 	background-repeat: no-repeat;
 	background-position: 0 top;
 }
