--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,8 +3,7 @@
     <div class="three column row">
       <div class="column">
         <h3>About</h3>
-        Lorem Ipusum
-        Lorem Ipusum
+        <%= Setting.about %>
       </div>
       <div class="column">
         <h3>Column 2</h3>
