Fix kcal for Calories

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -24,7 +24,7 @@
         <i class="doctor icon"></i>
         Kalorien
         <div class="detail">
-          <%= @recipe.calories %>min
+          <%= @recipe.calories %>kcal
         </div>
       </a>
     </div>
