* Add ingredients And Preparation Steps to Recipes * Fix missing public_activity (Change Recipe) * Improved I18n

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="field">
       <%= f.label :description %>
-      <%= f.text_field :description, :placeholder => t('.name_description') %>
+      <%= f.text_field :description, :placeholder => t('.description_description') %>
     </div>
 
     <%= f.button class: 'ui primary button' %>
