--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Ingredient</h1>
+<h2><%= context_title t('.edit_ingredient') %></h2>
 
 <%= render 'form', ingredient: @ingredient %>
-
-<%= link_to 'Show', @ingredient %> |
-<%= link_to 'Back', ingredients_path %>
