--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Recipe</h1>
+<h2><%= context_title t('.edit_recipe') %></h2>
 
 <%= render 'form', recipe: @recipe %>
-
-<%= link_to 'Show', @recipe %> |
-<%= link_to 'Back', recipes_path %>
