--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Recipe</h1>
+<h2><%= context_title t('.new_recipe') %></h2>
 
 <%= render 'form', recipe: @recipe %>
-
-<%= link_to 'Back', recipes_path %>
