--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,11 +1,16 @@
-<% context_title @recipe.name %>
+<h2><%= context_title @recipe.name %></h2>
+
 <% context_action t('.edit'), edit_recipe_path(@recipe), :write %>
 <% context_action t('.delete'), delete_modal(@recipe), :remove %>
+
 <% recipe_presenter = present(@recipe) %>
-<h2><%= @recipe.name %></h2>
 
 <p>
   <%= @recipe.description %>
+</p>
+
+<p>
+By <%= present(@recipe.author).avatar %> - Difficulty: <%= @recipe.difficulty %>
 </p>
 
 <div class="ui grid">
@@ -13,7 +18,16 @@
     <div class="column">
       <a class="ui teal label">
         <i class="wait icon"></i>
-        Vorbereitung
+        <%= t('.preparation') %>
+        <div class="detail">
+          <%= @recipe.preparation_time %>min
+        </div>
+      </a>
+    </div>
+    <div class="column">
+      <a class="ui teal label">
+        <i class="wait icon"></i>
+        <%= t('.cooking') %>
         <div class="detail">
           <%= @recipe.preparation_time %>min
         </div>
@@ -22,7 +36,7 @@
     <div class="column">
       <a class="ui teal label">
         <i class="doctor icon"></i>
-        Kalorien
+        <%= t('.calories') %>
         <div class="detail">
           <%= @recipe.calories %>kcal
         </div>
@@ -31,14 +45,11 @@
     <div class="column">
       <a class="ui teal label">
         <i class="users icon"></i>
-        Portionen
+        <%= t('.portions') %>
         <div class="detail">
           <%= @recipe.portions %>
         </div>
       </a>
-    </div>
-    <div class="column">
-      <%= present(@recipe.author).avatar %>
     </div>
   </div>
 </div>
