--- a/app/views/public_activity/blog/_create.html.erb
+++ b/app/views/public_activity/blog/_create.html.erb
@@ -1,3 +1,3 @@
 <%= render_feed_event activity, 'newspaper' do %>
-  New Blog Article <%= link_to activity.trackable.title, activity.trackable %> written by <%= link_to activity.owner.email, activity.owner if activity.owner %> 
+  New Blog Article <%= link_to activity.trackable.title, activity.trackable %> written by <%= link_to activity.owner.name, activity.owner if activity.owner %> 
 <% end %>
