* SEO - Friendly URLS * Updated Gem * Images in Recipes * Nivo Slider in Recipe * Real User Policies! * User with names * New or updated Cards for User and Recipe * New Setting: Number of Text Rosw in Text Areas * Removed image controller * ignore public/uploads * User avatars * 403.html

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require semantic_ui/semantic_ui
+ *= require nivo
  *= redwine
  *= metro
  *= require_tree .
