--- a/app/views/application/_modal.html.erb
+++ b/app/views/application/_modal.html.erb
@@ -9,11 +9,11 @@
   <div class="actions">
     <div class="ui cancel red basic inverted button">
       <i class="remove icon"></i>
-      <%= t 'no' %>
+      <%= t :no, scope: :application %>
     </div>
     <div class="ui ok green basic inverted button">
       <i class="checkmark icon"></i>
-      <%= t 'yes' %>
+      <%= t :yes, scope: :application %>
     </div>
   </div>
 </div>
