--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,3 +1,3 @@
-<% context_title t('.activities') %>
+<h2><%= context_title t('.activities') %></h2>
 
 <%= render 'activities', activities: @activities %>
