--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,5 +1,4 @@
-<div class="ui form">
-<%= form_for(blog) do |f| %>
+<%= form_for(blog, class: 'ui form') do |f| %>
   <% if blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
@@ -32,8 +31,7 @@
     <%= f.datetime_select :published_at %>
   </div>
 
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-  <% end %>
-</div>
+  <div class="buttons">
+    <%= f.submit %>
+  </div>
+<% end %>
