--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -12,7 +12,7 @@
 
   <%= form_for([commentable, comment], html: {class: 'ui reply form'}) do |f| %>
       <div class="field">
-        <%= f.text_area :comment, rows: 10, :placeholder => t('.text_description') %>
+        <%= f.text_area :comment, rows: Setting.text_rows, :placeholder => t('.text_description') %>
       </div>
       <div class="field">
         <%= f.button class: 'ui primary submit labeled icon button' do %>
