--- a/app/views/public_activity/blog/_create.html.erb
+++ b/app/views/public_activity/blog/_create.html.erb
@@ -1,3 +1,5 @@
 <%= render_feed_event activity, 'newspaper' do %>
-  New Blog Article <%= link_to activity.trackable.title, activity.trackable %> written by <%= link_to activity.owner.name, activity.owner if activity.owner %> 
+  <% a = link_to(activity.trackable.title, activity.trackable) %>
+  <% o = activity.owner ? link_to(activity.owner.name, activity.owner) : t(:guest, scope: :application) %>
+  <%= t('.new_blog_article', article: a, owner: o).html_safe%>
 <% end %>
