--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,12 @@
 <h2><%= context_title @user.name %></h2>
-<% context_action t('.edit'), edit_user_password_path(@user), :write %>
+<% context_action t('.edit'), edit_user_path(@user), :write %>
 <% context_action t('.delete'), delete_modal(@user), :remove %>
 
-<%= @user.email %>
 
+<div class="ui grid">
+  <div class="stackable doubling four column row">
+    <div class="column">
+      <%= present(@user).as_card %>
+    </div>
+  </div>
+</div>
