--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,9 @@
 <h2><%= context_title t('.users') %></h2>
 
-<div class="ui grid">
-  <div class="stackable doubling four column row">
-    <div class="column">
-      <% @users.each do |user| %>
-        <%= present(user).as_card %>
-      <% end %>    
-    </div>
+<div class="ui four column doubling stackable grid">
+  <div class="column">
+    <% @users.each do |user| %>
+      <%= present(user).as_card %>
+    <% end %>    
   </div>
 </div>
