* Link to comments in blog * Fix remove image from recipe not working * Fix User index again

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,4 +1,4 @@
-<div class="ui comments">
+<div class="ui comments" id="comments">
   <h3 class="ui dividing header"><%= t '.comments' %></h3>
   <% commentable.comments.includes(:user).each do |comment| %>
       <%= present(comment).comment_view %>
