--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,6 +1,7 @@
 <h2><%= context_title @blog.title %></h2>
 <% context_action t('.edit'), edit_blog_path(@blog), :write %>
-<% context_action t('.delete'), delete_modal(@blog), :remove %>
+<% context_action t('.delete'), '#', :remove %>
+<%= delete_modal(@blog, :title) %>
 
 <% bl = present(@blog) %>
 
