--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,9 +1,7 @@
 <h2><%= context_title @recipe.name %></h2>
-
 <% context_action t('.edit'), edit_recipe_path(@recipe), :write %>
-<% context_action t('.delete'), delete_modal(@recipe), :remove %>
-
-<% recipe_presenter = present(@recipe) %>
+<% context_action t('.delete'), '#', :remove %>
+<%= delete_modal(@recipe, :name) %>
 
 <% if @recipe.images.any? %>
   <div class="ui stackable divided grid">
