--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -1,6 +1,7 @@
 <h2><%= context_title @unit.name %></h2>
 <% context_action t('.edit'), edit_unit_path(@unit), :write %>
-<% context_action t('.delete'), delete_modal(@unit), :remove %>
+<% context_action t('.delete'), '#', :remove %>
+<%= delete_modal(@unit, :name) %>
 
 <% un = present(@unit) %>
 
