--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <h2><%= context_title @user.name %></h2>
 <% context_action t('.edit'), edit_user_path(@user), :write %>
-<% context_action t('.delete'), delete_modal(@user), :remove %>
+<% context_action t('.delete'), '#', :remove %>
+<%= delete_modal(@user, :name) %>
 
 
 <div class="ui grid">
