* Fix missing user_presenter * Deleted Ingredients are BAD!

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,6 +3,8 @@
 <% context_action t('.delete'), '#', :remove %>
 <%= delete_modal(@recipe, :name) %>
 
+<% recipe_presenter = present(@recipe) %>
+
 <% if @recipe.images.any? %>
   <div class="ui stackable divided grid">
     <div class="row">
