* translatable public_activity * Pageable User, Blog, Ingredient and Recipe * Calories for Ingredients * Improved comments * no more email as ID

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -38,6 +38,8 @@
         </div>
       <% end %>
     </div>
+
+    <%= paginate @blogs %>
   </div>
   <div class="computer tablet only five wide column">
     <div class="ui piled segment">
@@ -45,3 +47,4 @@
     </div>
   </div>
 </div>
+
