--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -7,7 +7,28 @@
     </div>
     <div class="field">
       <%= f.label :description %>
-      <%= f.text_field :description, :placeholder => t('.description_description') %>
+      <%= f.text_area :description, rows: Setting.text_rows, :placeholder => t('.description_description') %>
+    </div>
+    <div class="field">
+      <%= f.label :calories_per_volume %>
+      <div class="ui right labeled input">
+        <%= f.number_field :calories_per_volume, :placeholder => t('.calories_per_volume_description') %>
+        <div class="ui teal label">kcal</div>
+      </div>
+    </div>
+    <div class="field">
+      <%= f.label :calories_per_weight %>
+      <div class="ui right labeled input">
+        <%= f.number_field :calories_per_weight, :placeholder => t('.calories_per_weight_description') %>
+        <div class="ui teal label">kcal</div>
+      </div>
+    </div>
+    <div class="field">
+      <%= f.label :calories_per_piece %>
+      <div class="ui right labeled input">
+        <%= f.number_field :calories_per_piece, :placeholder => t('.calories_per_piece_description') %>
+        <div class="ui teal label">kcal</div>
+      </div>
     </div>
 
     <%= f.button class: 'ui primary button' %>
