--- a/app/views/public_activity/blog/_view.html.erb
+++ b/app/views/public_activity/blog/_view.html.erb
@@ -1,3 +1,5 @@
 <%= render_feed_event activity, 'newspaper' do %>
-  Blog Article <%= link_to activity.trackable.title, activity.trackable %> viewed by <%= link_to activity.owner.email, activity.owner if activity.owner %> 
+  <% a = link_to(activity.trackable.title, activity.trackable) %>
+  <% u = activity.owner ? link_to(activity.owner.name, activity.owner) : t(:guest, scope: :application) %>
+  <%= t('.view_blog_article', article: a, user: u).html_safe%>
 <% end %>
