--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -1,28 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title><%= yield(:title) %></title>
-    <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon"/>
-    <%= stylesheet_link_tag 'style', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= csrf_meta_tags %>
-</head>
-<body>
-  <div id="redband">
-  </div>
-  <div id="foodcontainer" class="ui container">
-    <header>
-      <h1><%= 'Rezeptsammlung.ch' %></h1>
-    </header>
-    <%= render 'menu' %>
-    <%= render 'message' %>
-    <div class="ui basic segment">
+    <meta charset='utf-8' />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+    <%= wicked_pdf_stylesheet_link_tag 'pdf' %>
+    <%= wicked_pdf_javascript_include_tag "number_pages" %>
+  </head>
+  <body onload='number_pages'>
+    <div id="content">
       <%= yield %>
     </div>
-    <%= render 'footer' %>
-  </div>
-</body>
+  </body>
 </html>
+
