--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -17,6 +17,14 @@
       </div>
       <div class="eight wide column">
         <%= recipe_presenter.formatted_description %>
+        <div class="ui labeled button" tabindex="0">
+          <%= link_to recipe_path(@recipe, :format => :pdf), class: 'ui red button' do %>
+            <%= icon('print') %> Print
+          <% end %>
+          <%= link_to recipe_path(@recipe, :format => :pdf), class: 'ui basic orange left pointing label' do %>
+            <%= icon('file pdf outline') %> PDF
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
