--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-# Unit and quantity should be next to each other, aligned to the space.
+// Unit and quantity should be next to each other, aligned to the space.
 td.quantity { padding-right: 0; }
 td.unit { padding-left: 0; }
