--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Blog</h1>
+<h2><%= context_title t('.new_blog_entry') %></h2>
 
 <%= render 'form', blog: @blog %>
-
-<%= link_to 'Back', blogs_path %>
