--- a/app/views/recipes/show.pdf.erb
+++ b/app/views/recipes/show.pdf.erb
@@ -64,7 +64,7 @@
 <div class="ui stackable divided grid">
   <div class="row">
     <div class="five wide column">
-      <%= recipe_presenter.show_ingredients %>
+      <%= recipe_presenter.show_ingredients @portions %>
     </div>
     <div class="eleven wide column">
       <%= recipe_presenter.show_preparation_steps %>
