--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(blog, class: 'ui form') do |f| %>
+<%= form_for(blog, html: { class: 'ui form', multipart: true }) do |f| %>
   <% if blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
@@ -10,6 +10,16 @@
       </ul>
     </div>
   <% end %>
+
+  <div class="field">
+    <%= f.label :header_image %>
+    <div>
+      <%= f.label :header_image, class: "ui teal icon button" do %>
+        <%= icon('upload') + t('.select_image') %>
+      <% end %>
+      <%= f.file_field :header_image, style: 'display:none' %>
+    </div>
+  </div>
 
   <div class="field">
     <%= f.label :title %>
@@ -32,6 +42,6 @@
   </div>
 
   <div class="buttons">
-    <%= f.submit %>
+    <%= f.submit class: 'ui primary button' %>
   </div>
 <% end %>
