--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Blog</h1>
+<h2><%= context_title t('.edit_blog_entry') %></h2>
 
 <%= render 'form', blog: @blog %>
-
-<%= link_to 'Show', @blog %> |
-<%= link_to 'Back', blogs_path %>
