Improved Translations, more translations, removed duplication, fixes PFD Author moved to footer Some validation added Some units added Removed duplication from Context Actions Fixed routing problem in combination of portions concern with :new (hackish) Added some Units to the db seed

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -19,7 +19,7 @@
       <div class="column">
         <h3><%= t('.links') %></h3>
         <div class="ui inverted link list">
-          <%= link_to t('.todo'), users_path, class: 'item' %>
+          <%= link_to "Todo", users_path, class: 'item' %>
         </div>
       </div>
     </div>
