--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -32,5 +32,5 @@
     </div>
 
     <%= f.button class: 'ui primary button' %>
-    <%= link_to t(:cancel, scope: :generic), ingredients_path, class: 'ui secondary button' %>
+    <%= link_to t(:cancel, scope: :application), ingredients_path, class: 'ui secondary button' %>
 <% end %>
