--- a/app/views/recipes/show.pdf.erb
+++ b/app/views/recipes/show.pdf.erb
@@ -6,8 +6,7 @@
 
 <% recipe_presenter = present(@recipe) %>
 
-<%= recipe_presenter.formatted_description %>
-
+<em><%= recipe_presenter.formatted_description %></em>
 
 <div class="ui grid">
   <div class="doubling six columns row">
