--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,5 +1,4 @@
-<% context_title t('.settings') %>
-
+<h2><%= context_title t('.settings') %></h2>
 <table class="ui striped table">
   <thead>
     <tr>
