--- a/app/views/units/_form.html.erb
+++ b/app/views/units/_form.html.erb
@@ -19,5 +19,5 @@
     </div>
 
     <%= f.button class: 'ui primary button' %>
-    <%= link_to t(:cancel, scope: :generic), units_path, class: 'ui secondary button' %>
+    <%= link_to t(:cancel, scope: :application), units_path, class: 'ui secondary button' %>
 <% end %>
